--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -4,10 +4,17 @@
     min-height:100vh; 
     padding-bottom:20px;
 }
+.home-light{
+    background-color: var(--light-bg);
+    color:black;
+}
 .movies-wrapper{
     margin-top:20px;
     display: flex;
     padding:20px;
+}
+.light-movies-wrapper {
+    background-color: var(--light-bg);
 }
 .popular-container{ 
     display: flex;
@@ -18,12 +25,31 @@
     display: flex;
     flex-wrap:wrap;
 }
+
+.page-numbers{
+    display: flex;
+    justify-content: space-around;
+    width:60%;
+    cursor:pointer;
+    margin-top:20px;
+}
+.current-page{
+    border-bottom: 1px solid var(--white);
+    cursor:pointer;
+}
+.page{
+    cursor:pointer;
+}
 .top-rated-container{
     display: flex;
     flex-direction:column;
     align-items: center;
     width:40%;
     height:fit-content;
+    /* padding:20px 0; */
+    /* margin-top:40px; */
+
+
 }
 .top-rated-cards-wrapper{
     display: flex;
@@ -33,4 +59,24 @@
     box-shadow: -11px 2px 33px 1px rgba(8,7,7,0.75);
     -webkit-box-shadow: -11px 2px 33px 1px rgba(8,7,7,0.75);
     -moz-box-shadow: -11px 2px 33px 1px rgba(8,7,7,0.75);
+}
+
+ 
+@media(max-width:768px){
+    .movies-wrapper{
+       flex-direction: column;
+       align-items: center;
+    }
+    .top-rated-container{
+        margin-top:50px;
+        width:80%;
+    }
+    .page-numbers{
+        width:100%;
+    }
+}
+@media(max-width:600px){
+    .homepage-container{
+        margin-top:var(--header-height-mobile);
+    }
 }
